# tolkien-retriever

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py  s3_pdf_loader.py  semantic_splitter.py
src/adapters/api/: dependencies.py  exception_handlers.py  main.py
src/adapters/api/dto/: author_dto.py  message_dto.py  session_dto.py  user_dto.py
src/adapters/api/routers/: chat.py  message.py  session.py
src/adapters/llm/: langgraph_agent.py  langgraph_builder.py  main.py
src/adapters/mappers/: author_mapper.py  message_mapper.py
src/adapters/repositories/conversa_repository/: in_memory_conversa_repository.py
src/adapters/repositories/session_repository/: in_memory_message_repository.py  in_memory_session_repository.py
src/adapters/ws/: dependencies.py
src/adapters/ws/handlers/: session_ws_handler.py
src/adapters/ws/routers/: chat.py  session.py
src/application/use_cases/: open_session.py
src/core/application/: message_service.py
src/core/domain/: enums.py
src/domain/: agente.py  conversa.py  documento.py  mensagem.py
src/domain/entities/: agent.py  user.py
src/infra/adapters/: utils.py
src/infra/mappers/: message_mapper.py  rulebook_mapper.py  session_mapper.py
src/ports/repositories/: conversa_repository.py  session_repository.py
src/use_cases/: handle_user_query.py
tests/: conftest.py
tests/integration/: test_minio_storage_integration.py  test_mongodb_rulebook_repository_integration.py
tests/unit/: test_rulebook_service.py
(+92 files in other folders)
