[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tolkien-retriever"
version = "0.1.0"
description = "Backend API para retrieval de manuais de jogos and chat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"langchain==1.0.3",
	"langgraph==1.0.2",
	"langchain-openai==1.0.1",
	"langchain-experimental==0.4.1",
	"langchain-qdrant==1.1.0",
	"fastapi==0.120.3",
	"pydantic==2.12.3",
	"uvicorn[standard]==0.38.0",
	"python-dotenv==1.2.1",
	"httpx==0.28.1",
	"minio==7.2.18",
	"qdrant-client==1.16.0",
	"motor==3.7.1",
    "python-multipart==0.0.20",
    "docling==2.74.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "black==24.10.0",
    "isort==5.13.2",
	"pre-commit==3.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]